# sphinx-nefertiti

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stylelintrc.json  ChangeLog.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  babel.cfg  debug_sphinx.py  docs-deps.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yaml  publish.yaml  tests.yaml
config/: bootstrap-rollup.config.js  nefertiti-rollup.config.js
docs/: requirements.txt
docs/source/: accessibility.rst  changelog.md  conf.py  contributing.rst  development.rst  index.rst  localization.rst  quick-start.rst
js/: .eslintrc.json
js/src/: backtotop.js  bootstrap.js  cschemes.js  figures.js  github.js  gitlab.js  index.js  lightdark.js  locales.js  menu.js  mermaid.js  navbar.js  pagetoc.js  repometrics.js  tables.js  tocresize.js  utils.js  versions.js
js/tests/: karma.conf.js
scss/: _functions.scss  _layout.scss  _mixins.scss  _root.scss  _theme.scss  _utilities.scss  _variables-blue.scss  _variables-cyan.scss  _variables-green.scss  _variables-indigo.scss  _variables-orange.scss  _variables-pink.scss  _variables-purple.scss  _variables-red.scss  _variables-teal.scss  _variables-yellow.scss  _variables.scss  nftt-pygments.scss  sphinx-nefertiti-blue.scss  sphinx-nefertiti-default.scss  sphinx-nefertiti-green.scss  sphinx-nefertiti-indigo.scss  sphinx-nefertiti-orange.scss  sphinx-nefertiti-pink.scss  sphinx-nefertiti-purple.scss  sphinx-nefertiti-red.scss  sphinx-nefertiti-teal.scss  sphinx-nefertiti-yellow.scss  sphinx-nefertiti.scss
scss/components/: _admonitions.scss  _code.scss  _docutils.scss  _images.scss  _link.scss  _navbar.scss  _toc.scss
site/: apidoc.html  index-2-row-header.html  index.html  index_wo_toc.html
site/css/: pygments.css  pygments_dark.css
sphinx_nefertiti/: __init__.py  breadcrumbs.html  colorsets-dropdown.html  colorsets.py  docsloc.py  docsver.py  exceptions.py  extensions.html  fonts.py  footer.html  globaltoc.html  header-links.html  l10n-dropdown.html  l10n.py  layout.html  lightdark-dropdown.html  links.py  locale-dropdown.html  modal.html  pager.html  pygments.py  search.html  searchbox.html  searchresults.html  theme.conf  utils.py  version-dropdown.html  versions.py
sphinx_nefertiti/colorsets/: colorsets.js  sphinx-nefertiti-blue.min.css  sphinx-nefertiti-blue.min.css.map  sphinx-nefertiti-default.min.css  sphinx-nefertiti-default.min.css.map  sphinx-nefertiti-green.min.css  sphinx-nefertiti-green.min.css.map  sphinx-nefertiti-indigo.min.css  sphinx-nefertiti-indigo.min.css.map  sphinx-nefertiti-orange.min.css  sphinx-nefertiti-orange.min.css.map  sphinx-nefertiti-pink.min.css  sphinx-nefertiti-pink.min.css.map  sphinx-nefertiti-purple.min.css  sphinx-nefertiti-purple.min.css.map  sphinx-nefertiti-red.min.css  sphinx-nefertiti-red.min.css.map  sphinx-nefertiti-teal.min.css  sphinx-nefertiti-teal.min.css.map  sphinx-nefertiti-yellow.min.css  sphinx-nefertiti-yellow.min.css.map
sphinx_nefertiti/locale/: sphinx.pot
sphinx_nefertiti/static/: nftt-pygments.css  nftt-pygments.min.css  pygments.css  pygments_dark.css  sphinx-nefertiti-blue.css  sphinx-nefertiti-blue.min.css  sphinx-nefertiti-default.css  sphinx-nefertiti-default.min.css  sphinx-nefertiti-green.css  sphinx-nefertiti-green.min.css  sphinx-nefertiti-indigo.css  sphinx-nefertiti-indigo.min.css  sphinx-nefertiti-orange.css  sphinx-nefertiti-orange.min.css  sphinx-nefertiti-pink.css  sphinx-nefertiti-pink.min.css  sphinx-nefertiti-purple.css  sphinx-nefertiti-purple.min.css  sphinx-nefertiti-red.css  sphinx-nefertiti-red.min.css  sphinx-nefertiti-teal.css  sphinx-nefertiti-teal.min.css  sphinx-nefertiti-yellow.css  sphinx-nefertiti-yellow.min.css  sphinx-nefertiti.min.js  (+1 more)
tests/: conftest.py  fixtures.py  test_sample_projects.py
(+115 files in other folders)
